style.css
/* Created by Artisteer v4.2.0.60623 */

@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic,800,800italic');

/* Defining the muddy red/brown in the newest Grinnell theme... */

:root {
    --grinnell-red: #9E4024;
}

/* Styles from the 'Collections' view defined in module dg7 */

div.collection-value h3 {
    margin: 5px 0 !important;
}

.intro-text {
    background: #FAE6C1;
    padding: 0px 25px 60px 25px;
    border: 1px solid #E3C181;
    border-radius: 10px;
}

.intro-text-no-form {
    padding: 25px;
}

.view-header {
    margin-bottom: 25px;
}

.views-field-TN-Image {
    height: 175px !important;
    overflow: hidden;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
}

.thumbnail {
    padding: 0px;
    border-color: #FFF;
}

.collection-tile  {
    background-color: #FAE6C1;
    margin: 0;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    padding: 14px;
    line-height: 1.25;
    height: 73px;
    overflow: hidden;
    text-align: center;
}

.collection-tile a, .collection-tile a:link, .collection-tile a:visited, .collection-tile a:hover, .collection-tile a:active {
    color: var(--grinnell-red) !important;
    text-decoration: none;
}


/* Additions for Islandora Solr Collection View products */

div.view.view-dg7-collection div.view-content div.views-row div.views-field.views-field-PID span.field-content div.wrapper {
  margin: 5px;
}

div.view.view-dg7-collection div.view-content div.views-row div.views-field.views-field-PID span.field-content div.wrapper div.left {
  display: table-cell;
  width: 150px;
  margin: 10px;
}

div.view.view-dg7-collection div.view-content div.views-row div.views-field.views-field-PID span.field-content div.wrapper div.left a img {
  width: 150px !important;
  max-height: 200px;
}

div.view.view-dg7-collection div.view-content div.views-row div.views-field.views-field-PID span.field-content div.wrapper div.right {
  display: table-cell;
  vertical-align: top;
  padding: 15px;
}

div.view.view-dg7-collection div.view-content div.views-row div.views-field.views-field-PID span.field-content div.wrapper div.right div.collection-value {
  white-space: normal;
}

#collection-view-teaser-pull-quote {
  font-weight: bold;
  padding: 10px;
  font-style: italic;
  width: 90%;
}

#collection-view-teaser-pull-quote:before, #collection-view-teaser-pull-quote:after {
  content: '"';
}

div.collection-value:empty {
  display: none;
}

/* Color additions for Oral Histories */
div.tier.active span {
  font-weight: bold;
}
div.tier.active span,
div.tier.active span span.oh_speaker_text {
  color: black !important;
}
div.tier.active span span.oh_speaker_text {
  font-weight: normal !important;
}
span.oh_speaker_text {
  color: #ffff00 !important;     /* yellow */
}
span.oh_speaker_1 {
  display: block;
  color: #00ffff;     /* aqua */
}
span.oh_speaker_2 {
  display: block;
  color: #80ff00;     /* bright green */
}
span.oh_speaker_3 {
  display: block;
  color: #ff0000;     /* bright red */
}
span.oh_speaker_4 {
  display: block;
  color: #ff00ff;     /* fuscia */
}
span.oh_speaker_5 {
  display: block;
  color: #ffbf00;     /* orange */
}

span#authorization-forms-button {
    display: block;
    background: var(--grinnell-red);
    padding: 5px 10px;
    border: 1px solid black;
    border-radius: 5px;
    margin: 5px 20px;
    color: white !important;
    width: 220px;
    text-align: center;
    font-style: bold;
}

span.authorization-forms-button {
    display: inline-block;
    background: var(--grinnell-red);
    padding: 5px 10px;
    border: 1px solid black;
    border-radius: 5px;
    margin: 5px 20px; 
    text-align: center;
    width: 220px;
}

span.authorization-forms-button a {
    color: white !important;
    font-style: bold;
}

.form-managed-file .form-file, .form-managed-file .form-submit {   /* MAM better looking form buttons */
  margin: 4px 0;
}

fieldset, fieldset legend {   /* MAM better looking webforms */
  display: block;
  margin: 10px 0px;
  border: black 1px solid;
  padding: 7px 12px !important;
  border-radius: 5px;
}

div.islandora-book-metadata {   /* MAM better spacing of book metadata display */
  margin-top: 1em;
}

dl.islandora-object-tn {   /* MAM added for islandora-default.tpl.php */
  margin: 0 0 2.0em 0;
}

div.islandora-default-metadata {
  margin: 0 0 2.0em 0;
}

tr.hidden {          /* MAM addition 01-December-2015 to hide redundant rows of child/parent metadata */
  display: none;     /* See islandora_mods_display/theme/theme.inc */
}

label {
  margin-bottom: 0px;  /* MAM addition 01-Oct-2015 to override bootstrap min of 5px */
}

div.form-type-tabs 
{
  margin-top: 2em;    /* MAM ingest form improvement 01-Oct-2015 */
}

div.islandora-object-description
{
  margin: 1em 0;    /* MAM object display improvement 20-Oct-2015 */
}

div.islandora-object-metadata
{
    margin-top: 1em;      /* MAM object display improvement 20-Oct-2015 */
    margin-bottom: 1em;
}

legend       /* MAM added 23-Oct-2015 */
{
    font-size: 1.5em;
    /* line-height: 2em; */     /* too big when fieldset is collapsed */
}

div.form-type-checkbox            /* MAM added 23-Oct-2015 for improved Bookmarks table formatting */
{
    text-align: center;
}

div.form-item-collection-search,   /* MAM added 23-Oct-2105 to counter effects of div.form-item above */
div.form-type-select,
div.form-type-textfield
{
    text-align: left;
}

h1.with-tabs,          /* MAM added 23-Oct-2015.  Renders all page titles in Title Case. */
.fieldset-legend,
article.art-post h1
{
    text-transform: capitalize;
}

a#clip {            /* MAM 29-Oct-2015.  Hide the useless clip icon */
    display: none;
}

/* MAM 02-Nov-2015.  Additions that follow are provided to clean up the oral histories window. */

div.tier-selector-processed {
    margin-bottom: 0.8em;
}

div.or_annotation {
    font-style: italic;
    color: #aa4a30;
}

a#transcript-edit {
    padding-bottom: 9px;
}
/* ... */

